<resources>
    <string name="app_name">DeloiteTask</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_more">More</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_email">Email</string>
    <string name="label_password">Password</string>
    <string name="title_full_name">Full Name</string>
    <string name="title_national_id">National Id</string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_date_of_birth">Date Of Birth</string>
    <string name="error_validation_email_empty">The email field is empty please check it</string>
    <string name="error_validation_email_pattern">Incorrect email format Please confirm the email field.</string>
    <string name="error_validation_user_exist">The user already exists.</string>
    <string name="error_validation_phone_number_empty">The phone number field is empty please check it</string>
    <string name="error_validation_national_id_empty">The national id field is empty please check it</string>
    <string name="error_validation_date_of_birth_empty">The birthday field is empty please check it</string>
    <string name="error_validation_password_empty">The password field is empty please check it</string>
    <string name="error_validation_full_name_empty">The full name field is empty please check it</string>
    <string name="error_validation_login_invalid">Invalid Email or Password</string>
    <string name="success_sign_up">Successfully registered</string>
    <string name="success_login">Successfully Login</string>
    <string name="label_details">Details</string>
    <string name="label_logout">Logout</string>
    <string name="label_settings">Settings</string>
    <string name="setting_change_language">Change Language</string>
    <string name="data">Data</string>
    <string name="sort">Sort</string>
    <string name="search">Search…</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="title_activity_compose_main">ComposeMainActivity</string>
    <string name="strRetry">Retry</string>
    <string name="strFetchingDataFromServer">Fetch data from server\n</string>
</resources>