<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.deloitetask.screens.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.example.deloitetask.screens.main.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_homeFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:label="@string/label_settings"
        android:name="com.example.deloitetask.screens.main.ui.settings.SettingFragment" />

</navigation>