<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentations.more.MoreFragment">

    <data>

        <variable
            name="user"
            type="com.example.domain.model.signup.User" />

        <variable
            name="viewModel"
            type="com.example.deloitetask.screens.main.ui.more.MoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_16sdp"
                android:src="@drawable/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewFullNameMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@{user.fullName}"
                tools:text="@tools:sample/full_names"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
                app:layout_constraintTop_toTopOf="@+id/imageViewProfile"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
                app:layout_constraintVertical_bias="0.26999998"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewEmailMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:text="@tools:sample/full_names"
                android:layout_marginStart="@dimen/_8sdp"

                android:text="@{user.email}"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/textViewFullNameMore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewProfile" />

            <TextView
                android:id="@+id/textViewDetailsMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textStyle="bold"
                android:text="@string/label_details"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewNationalIdMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/title_national_id"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetailsMore"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewNationalIdMoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@{user.nationalId}"
                tools:text="@tools:sample/lorem"
                app:layout_constraintTop_toBottomOf="@+id/textViewNationalIdMore"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewPhoneNumberMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/title_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/textViewNationalIdMoreValue"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewPhoneNumberMoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_4sdp"
                tools:text="@tools:sample/lorem"
                android:text="@{user.phoneNumber}"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumberMore"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />

            <TextView
                android:id="@+id/textViewDateOfBirthMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/title_date_of_birth"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumberMoreValue"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewDateOfBirthMoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_4sdp"
                tools:text="@tools:sample/lorem"
                android:text="@{user.dateOfBirth}"
                app:layout_constraintTop_toBottomOf="@+id/textViewDateOfBirthMore"
                app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />


            <TextView
                android:id="@+id/textViewSetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_16sdp"
                android:onClick="@{()->viewModel.navigateToSettings()}"
                android:text="@string/label_settings"
                app:layout_constraintTop_toBottomOf="@+id/textViewDateOfBirthMoreValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/textViewSetting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"
                android:rotation="180"
                android:layout_marginStart="@dimen/_16sdp"
                app:layout_constraintTop_toTopOf="@+id/textViewLogout"
                app:layout_constraintBottom_toBottomOf="@+id/textViewLogout"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:padding="@dimen/_8sdp"
                android:text="@string/label_logout"
                android:onClick="@{()->viewModel.doLogout()}"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/viewSeparator"
                app:layout_constraintStart_toEndOf="@+id/imageViewLogout"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>